res/themes/tchap-dark/css/_tchap_custom.pcss
/*
override components style
better that it be loaded after matrix-react-sdk/res/css/_components.pcss
*/
/*
example of how to override a style
.mx_NewRoomIntro > h2 {
    margin-top: 24px;
    font-size: 2.4rem;
    font-weight: 600;
    color: red; //<- new attribute
}
*/

/* This is for release anouncement description text*/
/* otherwise the text is grey on bleu background */
div[data-floating-ui-portal][data-floating-ui-inert] * {
    color: white;
}

 /* TODO: remove when compound is fixed  */
/* For tooltip hover, with grey background and black text */
div[data-floating-ui-focusable][role="tooltip"] {
    color: black;
    background-color: var(--cpd-color-gray-1000)
}

/* The first bubble description in the room, should not have blue background  */
.mx_RoomView_MessageList > li:nth-child(2) {
    --backgroundColor: transparent !important;
}

